<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_xlarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/vi_today_stock"
                layout="@layout/list_item_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2" />

            <TextView
                android:id="@+id/lbl_update_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:contentDescription="@string/lbl_stock_price_over_time"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/lbl_stock_price_over_time"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_regular_2x" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin_small"
                android:paddingLeft="@dimen/date_selection_margin_horizontal"
                android:paddingRight="@dimen/date_selection_margin_horizontal"
                android:paddingTop="@dimen/margin_small"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_start_date" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_end_date" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_update_chart"
                android:layout_width="@dimen/update_chart_button_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/update_chart_button_margin_left"
                android:layout_marginStart="@dimen/update_chart_button_margin_left"
                android:contentDescription="@string/get_stock_price"
                android:fontFamily="sans-serif-light"
                android:text="@string/get_stock_price" />

            <TextView
                android:id="@+id/lbl_chart_selection_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:contentDescription="@string/cd_date_range_selection_for_chart"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small" />

            <com.db.chart.view.LineChartView
                android:id="@+id/lcv_stock_overtime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart_height"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:contentDescription="@string/cd_chart_with_historical_data" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_data_to_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/select_price_type_to_project_in_chart"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/select_price_type_to_project_in_chart"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small" />

                <Spinner
                    android:id="@+id/sp_data_to_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/select_price_type_to_project_in_chart"
                    android:fontFamily="sans-serif-light" />

            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/vc_loader"
            layout="@layout/view_component_loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</ScrollView>
